package models;

public enum ActionType {
    created,
    updated,
    completed
}
