package models;

public enum PriorityLevel {
    low,
    medium,
    high
}
