package models;

public enum SubtaskStatus {
    open,
    completed
}
