package models;

public enum TaskStatus {
    open,
    completed,
    cancelled
}
