package models;

public enum CollaboratorCategory {
    Senior,
    Intermediate,
    Junior
}
