package models;

public enum RecurrenceType {
    daily,
    weekly,
    monthly
}
